@@ -1,3 +1,8 @@
+Mon Jan  3 14:08:42 2000  msolomon  <msolomon@fido.seva.net>
+
+	* WeatherNOAA.pm:
+	Allowed for new current conditions format; Changed minor text output
+
 Tue Apr  6 14:03:18 1999  msolomon  <msolomon@fido.seva.net>
 
 	* WeatherNOAA.pm:
